Make package the default pom goal

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
   </dependencies>
 
   <build>
+    <defaultGoal>package</defaultGoal>
+
     <plugins>
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
